--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "vue": "^2.3.3",
     "vue-resource": "^1.3.4",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "better-scroll": "^0.2.4",
+    "stylus": "^0.54.5"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
